@@ -1,4 +1,4 @@
-.TH VIFM 1 "October 18, 2016" "vifm 0.8.2"
+.TH VIFM 1 "October 27, 2016" "vifm 0.8.2"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -1523,6 +1523,12 @@ compare files in one or two views according the arguments.  The default
 is "bycontents listall ofboth grouppaths".  See "Compare views" section below
 for details.  Tree structure is incompatible with ls-like view, so value of
 \'lsview' option is ignored.
+.TP
+.BI "                                         :copen"
+.TP
+.BI ":cope[n]"
+opens menu with contents of the last displayed menu with navigation to files by
+default, if any.
 .TP
 .BI "                                         :copy"
 .TP
