@@ -35,8 +35,9 @@ show_user_menu(FileView *view, const char command[], int navigate)
 {
 	static menu_data_t m;
 	init_menu_data(&m, view, strdup(command), strdup("No results found"));
-	m.extra_data = navigate;
 
+	m.extra_data = navigate;
+	m.stashable = navigate;
 	m.execute_handler = &execute_users_cb;
 	m.key_handler = &users_khandler;
 
