@@ -39,6 +39,9 @@
 	Added e key to :jobs menu that displays list of errors issues by that
 	jobs, if any.  h key goes back to :jobs menu.
 
+	Added :copen command to restore last menu that supports navigation.
+	Thanks to Sassan Haradji (a.k.a. sassanh).
+
 	Enable restoring files from trash from custom views.
 
 	View current directory on ".." for quickview/view mode.  Thanks to
